--- a/main.html
+++ b/main.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	
-
-
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div id="text">
+        Welcome to the world of Web development
+    </div>
 </body>
-
 </html>
